# not_in_rust

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs  ntt_381.rs  small_ntt.rs
src/lib/scalar/: Cargo.toml
src/lib/scalar/src/: lib.rs  scalar.rs
